install rspec and start implementing integration tests
